<resources>
    <string name="app_name">Gugu</string>
    <string name="hint_username_login">User Name</string>
    <string name="hint_password_login">Password</string>
    <string name="btn_login">Sign In</string>
    <string name="hint_username_register">User Name</string>
    <string name="hint_password_register">Password</string>
    <string name="hint_password_insure">Repeat Password</string>
    <string name="btn_register">Register</string>
</resources>
